--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,38 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title></title>
+    <title><%= config.title %></title>
   </head>
   <body>
-    <h1>Title here</h1>
+    <h1><%= config.title %></h1>
     <main>
       <form action="/api/submit" method="post" enctype="application/x-www-form-urlencoded">
-        <% if (query.error == 1) { %>
-        <div class="error">An error occurred</div>
-        <% } %>
+        <div class="messages">
+          <% if (query.error == 1) { %>
+          <div class="error"><%= config.error %></div>
+          <% } %>
 
-        <div class="form-control">
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name" />
+          <div class="description"><%= config.description %></div>
         </div>
 
+        <% config.schema.forEach((field) => { %>
         <div class="form-control">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
+          <label for="<%= field.name %>"><%= field.label %></label>
+          <input type="<%= field.type %>" name="<%= field.name %>" id="<%= field.name %>" <%= field.required ? 'required' : '' %> />
         </div>
+        <% }) %>
 
         <div class="form-control">
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" />
-        </div>
-
-        <div class="form-control">
-          <label for="confirm-password">Confirm Password</label>
-          <input type="password" name="confirm-password" id="confirm-password" />
-        </div>
-
-        <div class="form-control">
-          <input type="submit" value="Submit" />
+          <input type="submit" value="<%= config.submit %>" />
         </div>
       </form>
     </main>
