--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,14 @@ main {
   max-width: 100%;
 }
 
+.messages {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0;
+}
+
 form {
   display: flex;
   flex-direction: column;
