--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,6 +14,8 @@
         <div class="messages">
           <% if (query.error == 1) { %>
           <div class="error"><%= config.error %></div>
+          <% } else if (query.error != undefined) { %>
+          <div class="error"><%= query.error %></div>
           <% } %>
 
           <div class="description"><%= config.description %></div>
@@ -28,6 +30,7 @@
 
         <div class="form-control">
           <input type="submit" value="<%= config.submit %>" />
+          <i class="mini-info"><%= config.submitionInfo %></i>
         </div>
       </form>
     </main>
